src/styles/markdown.css
.post-content {
  width: 100%;
  color: var(--description-text-color);
}

.post-content>details {
  border: 1px var(--contrast-color) solid;
  border-radius: var(--border-radius);
  padding: 1rem;
}

.post-content [class~='lead'] {
  color: #4b5563;
  font-size: 1.25em;
  line-height: 1.6;
  margin-top: 1.2em;
  margin-bottom: 1.2em;
}

.post-content a {
  color: var(--primary-text-color);
  text-decoration: underline;
  font-weight: 500;
  transition: opacity 0.2s;
  line-break: anywhere;
  text-decoration-line: underline;
  text-decoration-color: var(--primary-text-color);
  text-decoration-thickness: .125rem;
  text-decoration-style: dashed;
  text-underline-offset: .25rem;
}

.post-content a:hover {
  opacity: 0.7;
}

.post-content strong {
  color: var(--primary-text-color);
  font-weight: 600;
}

.post-content ol[type='A'] {
  --list-counter-style: upper-alpha;
}

.post-content ol[type='a'] {
  --list-counter-style: lower-alpha;
}

.post-content ol[type='A' s] {
  --list-counter-style: upper-alpha;
}

.post-content ol[type='a' s] {
  --list-counter-style: lower-alpha;
}

.post-content ol[type='I'] {
  --list-counter-style: upper-roman;
}

.post-content ol[type='i'] {
  --list-counter-style: lower-roman;
}

.post-content ol[type='I' s] {
  --list-counter-style: upper-roman;
}

.post-content ol[type='i' s] {
  --list-counter-style: lower-roman;
}

.post-content ol[type='1'] {
  --list-counter-style: decimal;
}

.post-content ol>li {
  position: relative;
  padding-left: 1em;
}

.post-content ul>li {
  position: relative;
  padding-left: 1em;
}

.post-content hr {
  border-color: #e5e7eb;
  border-top-width: 1px;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.post-content blockquote {
  font-weight: 500;
  font-style: italic;
  color: var(--primary-text-color);
  border-left-width: 0.25rem;
  border-left-color: #e5e7eb;
  quotes: '\201C' '\201D' '\2018' '\2019';
  margin-top: 1.6em;
  margin-bottom: 1.6em;
  padding-left: 1em;
}

.post-content blockquote p:first-of-type::before {
  content: open-quote;
}

.post-content blockquote p:last-of-type::after {
  content: close-quote;
}

.post-content h1 {
  color: var(--primary-text-color);
  font-weight: 800;
  font-size: 2.25em;
  margin-top: 0;
  margin-bottom: 0.8888889em;
  line-height: 1.1111111;
}

.post-content h2 {
  color: var(--primary-text-color);
  font-weight: 700;
  font-size: 1.5em;
  margin-top: 2em;
  margin-bottom: 1em;
  line-height: 1.3333333;
}

.post-content h3 {
  color: var(--primary-text-color);
  font-weight: 600;
  font-size: 1.25em;
  margin-top: 1.6em;
  margin-bottom: 0.6em;
  line-height: 1.6;
}

.post-content h4 {
  color: var(--primary-text-color);
  font-weight: 600;
  margin-top: 1.5em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

.post-content figure figcaption {
  color: #6b7280;
  line-height: 1.4285714;
  margin-top: 0.8571429em;
}

.post-content a code {
  color: var(--primary-text-color);
}

.post-content pre {
  color: var(--primary-text-color);
  background-color: #1f2937;
  overflow-x: scroll;
  font-size: 0.875em;
  line-height: 1.7142857;
  margin-top: 1.7142857em;
  margin-bottom: 1.7142857em;
  border-radius: 0.375rem;
  padding-top: 0.8571429em;
  padding-right: 1.1428571em;
  padding-bottom: 0.8571429em;
  padding-left: 1.1428571em;
}

.post-content pre code {
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  padding: 0;
  font-weight: 400;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  width: 100%;
}

.post-content pre code::before {
  content: none;
}

.post-content pre code::after {
  content: none;
}

.post-content .table {
  overflow-x: auto;
  margin: 2rem 0;
}

.post-content table {
  width: 100%;
  table-layout: auto;
  text-align: left;
  margin: 0 0 0.5em 0;
  font-size: 0.875em;
  line-height: 1.7142857;
  border-collapse: collapse;
}

.post-content .table::-webkit-scrollbar,
.post-content .table::-webkit-scrollbar-track {
  background-color: inherit;
  border-radius: calc(0.3rem + 1.5px);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.post-content .table::-webkit-scrollbar,
.post-content .table::-webkit-scrollbar-track {
  background-color: inherit;
  border-radius: calc(0.3rem + 1.5px);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.post-content .table::-webkit-scrollbar-thumb {
  background-color: var(--contrast-color);
  border: 4px solid transparent;
  background-clip: content-box;
  border-radius: 10px;
}

.post-content thead {
  color: var(--primary-text-color);
  font-weight: 600;
  border-bottom-width: 1px;
  border-bottom-color: var(--contrast-color);
}

.post-content thead th {
  vertical-align: bottom;
  padding-right: 0.5714286em;
  padding-bottom: 0.5714286em;
  padding-left: 0.5714286em;
  border: 1px solid var(--contrast-color);
}

.post-content tbody tr {
  border-bottom-width: 1px;
  border-bottom-color: var(--contrast-color);
}

.post-content tbody td {
  vertical-align: top;
  padding-top: 0.5714286em;
  padding-right: 0.5714286em;
  padding-bottom: 0.5714286em;
  padding-left: 0.5714286em;
  border: 1px solid var(--contrast-color);
}

.post-content {
  font-size: 1rem;
  line-height: 1.75;
}

.post-content p {
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.post-content img {
  margin-top: 2em;
  margin-bottom: 2em;
}

.post-content video {
  margin-top: 2em;
  margin-bottom: 2em;
}

.post-content figure {
  margin: 3rem 0;
}

.post-content figure>* {
  margin-top: 0;
  margin-bottom: 0;
}

.post-content h2 code {
  font-size: 0.875em;
}

.post-content h3 code {
  font-size: 0.9em;
}

.post-content ol {
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.post-content ul {
  margin-top: 1.25em;
  margin-bottom: 1.25em;
  padding-inline-start: 20px;
}

.post-content li {
  word-wrap: break-word;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.post-content>ul>li p {
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

.post-content>ul>li>*:first-child {
  margin-top: 1.25em;
}

.post-content>ul>li>*:last-child {
  margin-bottom: 1.25em;
}

.post-content>ol>li>*:first-child {
  margin-top: 1.25em;
}

.post-content>ol>li>*:last-child {
  margin-bottom: 1.25em;
}

.post-content ul ul,
.post-content ul ol,
.post-content ol ul,
.post-content ol ol {
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

.post-content hr+* {
  margin-top: 0;
}

.post-content h2+* {
  margin-top: 0;
}

.post-content h3+* {
  margin-top: 0;
}

.post-content h4+* {
  margin-top: 0;
}

.post-content> :first-child {
  margin-top: 0;
}

.post-content> :last-child {
  margin-bottom: 0;
}

.post-content-lg {
  font-size: 1.125rem;
  line-height: 1.7777778;
}

.post-content-lg p {
  margin-top: 1.3333333em;
  margin-bottom: 1.3333333em;
}

.post-content-lg [class~='lead'] {
  font-size: 1.2222222em;
  line-height: 1.4545455;
  margin-top: 1.0909091em;
  margin-bottom: 1.0909091em;
}

.post-content-lg blockquote {
  margin-top: 1.6666667em;
  margin-bottom: 1.6666667em;
  padding-left: 1em;
}

.post-content-lg h1 {
  font-size: 2.6666667em;
  margin-top: 0;
  margin-bottom: 0.8333333em;
  line-height: 1;
}

.post-content-lg h2 {
  font-size: 1.6666667em;
  margin-top: 1.2666667em;
  margin-bottom: 1.0666667em;
  line-height: 1.3333333;
}

.post-content-lg h3 {
  font-size: 1.3333333em;
  margin-top: 1.4666667em;
  margin-bottom: 0.6666667em;
  line-height: 1.5;
}

.post-content-lg h4 {
  margin-top: 1.7777778em;
  margin-bottom: 0.4444444em;
  line-height: 1.5555556;
}

.post-content-lg img {
  margin-top: 1.7777778em;
  margin-bottom: 1.7777778em;
}

.post-content-lg video {
  margin-top: 1.7777778em;
  margin-bottom: 1.7777778em;
}

.post-content-lg figure>* {
  margin-top: 0;
  margin-bottom: 0;
}

.post-content-lg figure figcaption {
  font-size: 0.8em;
  line-height: 1.5;
  margin-top: 1em;
}

.post-content-lg code {
  font-size: 0.8888889em;
  background-color: var(--contrast-color);
  border-radius: var(--border-radius);
  padding: 0.2rem 0.3rem;
  color: var(--secondary-text-color);
  overflow-wrap: anywhere;
}

.post-content-lg h2 code {
  font-size: 0.8666667em;
}

.post-content-lg h3 code {
  font-size: 0.875em;
}

.post-content-lg pre {
  font-size: 0.8888889em;
  line-height: 1.75;
  margin-top: 2em;
  margin-bottom: 2em;
  border-radius: 0.375rem;
  padding-top: 1em;
  padding-right: 1.5em;
  padding-bottom: 1em;
  padding-left: 1.5em;
}

.post-content-lg ol {
  margin-top: 1.3333333em;
  margin-bottom: 1.3333333em;
}

.post-content-lg ul {
  margin-top: 1.3333333em;
  margin-bottom: 1.3333333em;
}

.post-content-lg li {
  margin-top: 0.6666667em;
  margin-bottom: 0.6666667em;
}

.post-content-lg ol>li {
  padding-left: 0.5em;
}

.post-content-lg ol>li::before {
  left: 0;
}

.post-content-lg ul>li {
  padding-left: 0.5em;
}

.post-content-lg ul>li::before {
  width: 0.3333333em;
  height: 0.3333333em;
  top: calc(0.8888889em - 0.1666667em);
  left: 0.2222222em;
}

.post-content-lg>ul>li p {
  margin-top: 0.8888889em;
  margin-bottom: 0.8888889em;
}

.post-content-lg>ul>li>*:first-child {
  margin-top: 1.3333333em;
}

.post-content-lg>ul>li>*:last-child {
  margin-bottom: 1.3333333em;
}

.post-content-lg>ol>li>*:first-child {
  margin-top: 1.3333333em;
}

.post-content-lg>ol>li>*:last-child {
  margin-bottom: 1.3333333em;
}

.post-content-lg ul ul,
.post-content-lg ul ol,
.post-content-lg ol ul,
.post-content-lg ol ol {
  margin-top: 0.8888889em;
  margin-bottom: 0.8888889em;
}

.post-content-lg hr+* {
  margin-top: 0;
}

.post-content-lg h2+* {
  margin-top: 0;
}

.post-content-lg h3+* {
  margin-top: 0;
}

.post-content-lg h4+* {
  margin-top: 0;
}

.post-content-lg table {
  font-size: 0.8888889em;
  line-height: 1.5;
}

.post-content-lg thead th {
  padding: 0.75em;
}

.post-content-lg tbody td {
  padding-top: 0.75em;
  padding-right: 0.75em;
  padding-bottom: 0.75em;
  padding-left: 0.75em;
}

.post-content-lg> :first-child,
#introduction {
  margin-top: 0;
}

.post-content-lg> :last-child {
  margin-bottom: 0;
}

